--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,10 +31,12 @@ dependencies:
   cupertino_icons: ^1.0.6
   flutter:
     sdk: flutter
+  flutter_compass: ^0.8.0
   flutter_riverpod: ^2.5.1
   go_router: ^13.2.2
   google_fonts: ^6.2.1
   permission_handler: ^11.3.1
+  sensors_plus: ^5.0.1
 
 dev_dependencies:
   flutter_lints: ^3.0.0
@@ -51,8 +53,8 @@ flutter:
   # the material Icons class.
   uses-material-design: true
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/images/compass/
   #   - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
